implement hello world mvi app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.jshvarts.mosbymvi.MainActivity">
 
     <Button
-        android:id="@+id/hello_greeting_button"
+        android:id="@+id/hello_world_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -19,10 +19,11 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/greeting_textview"
+            android:id="@+id/hellow_world_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
+            android:textSize="18dp"
             android:layout_gravity="center_horizontal" />
 
         <ProgressBar
