--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.jshvarts.mosbymvi.MainActivity">
 
     <Button
-        android:id="@+id/hello_world_button"
+        android:id="@+id/helloWorldButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -19,7 +19,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/hellow_world_textview"
+            android:id="@+id/helloWorldTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -27,7 +27,7 @@
             android:layout_gravity="center_horizontal" />
 
         <ProgressBar
-            android:id="@+id/loading_indicator"
+            android:id="@+id/loadingIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
